--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.17.0",
     "express": "^4.14.1",
     "mongoose": "^4.8.5",
     "nodemon": "^1.11.0",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "mongodb": "^2.2.24"
   }
 }
